fix vertical overflow

--- a/css/global.css
+++ b/css/global.css
@@ -8,6 +8,7 @@
 
 html, body {
     overscroll-behavior-y: none;
+    overflow-y: hidden;
 }
 
 body {
